test_programs/compile_failure/noirc_frontend_tests_metaprogramming_comptime_type_in_runtime_code/src/main.nr

    pub fn foo(_f: FunctionDefinition) {}
    